# nginx

./: .gitignore  CMakeLists.txt  README.md  configure  configure-help.txt  configure-test.sh  configure-test.sh.bash
auto/: cmake.sh  install
src/core/: nginx.c  ngx_conf_file.c  ngx_connection.c  ngx_cycle.c
test/: test.c
